--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Web 2 Starter</title>
+  <title>Moana</title>
  
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- Normalize CSS makes browsers render all elements more consistently -->
@@ -13,13 +13,11 @@
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
+
 <body>
 	
   <!-- YOUR AWESOME WEBSITE -->
-	<h1>Web 2 Starter</h1>
-
-	
-
+	<h1>Moana</h1>
 
   <!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
