--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>Moana</title>
+  <title></title>
  
  <link rel="icon" href="favicon.ico" type="image/x-icon">
  
